--- a/Resources/Prototypes/_CP14/Entities/Objects/Weapons/Melee/base.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/Weapons/Melee/base.yml
@@ -1,7 +1,6 @@
 - type: entity
   id: CP14BaseWeaponChemical
-  abstract: true
-  categories: [ ForkFiltered ]
+  categories: [ HideSpawnMenu ]
   components:
   - type: SolutionContainerManager
     solutions:
@@ -21,8 +20,7 @@
 
 - type: entity
   id: CP14BaseWeaponThrowable
-  abstract: true
-  categories: [ ForkFiltered ]
+  categories: [ HideSpawnMenu ]
   components:
   - type: LandAtCursor
   - type: DamageOtherOnHit
@@ -50,16 +48,14 @@
 
 - type: entity
   id: CP14BaseWeaponLight
-  abstract: true
-  categories: [ ForkFiltered ]
+  categories: [ HideSpawnMenu ]
   components:
   - type: MeleeWeapon
     resetOnHandSelected: false
 
 - type: entity
   id: CP14BaseWeaponShort
-  abstract: true
-  categories: [ ForkFiltered ]
+  categories: [ HideSpawnMenu ]
   components:
   - type: MeleeWeapon
     range: 1.0 # 1.5 standart
@@ -67,8 +63,7 @@
 
 - type: entity
   id: CP14BaseWeaponSharp
-  abstract: true
-  categories: [ ForkFiltered ]
+  categories: [ HideSpawnMenu ]
   components:
   - type: Sharp
   - type: CP14Sharpened
@@ -86,8 +81,7 @@
 
 - type: entity
   id: CP14BaseWeaponDestructible
-  abstract: true
-  categories: [ ForkFiltered ]
+  categories: [ HideSpawnMenu ]
   components:
   - type: ExaminableDamage
     messages: CP14WeaponMessages
@@ -108,8 +102,7 @@
 
 - type: entity
   id: CP14BaseWeaponSelfDamage
-  abstract: true
-  categories: [ ForkFiltered ]
+  categories: [ HideSpawnMenu ]
   components:
   - type: CP14MeleeSelfDamage
     damageToSelf:
