--- a/Resources/Prototypes/_CP14/ModularCraft/parts.yml
+++ b/Resources/Prototypes/_CP14/ModularCraft/parts.yml
@@ -4,6 +4,24 @@
   sourcePart: CP14ModularBladeIronDagger
   addSlots:
   - Jewerly1
+  modifiers:
+  - !type:CP14ModularModifierAddComponents
+    copyFromProto:
+    - CP14BaseWeaponThrowable
+    - CP14BaseWeaponChemical
+    - CP14BaseWeaponSharp
+    components:
+    - type: ThrowingAngle
+      angle: 135
+    - type: EmbeddableProjectile
+      offset: 0.15,0.15
+      removalTime: 1
+  - !type:CP14ModularModifierModifyDamage
+    attackRateMultiplier: 1.8
+    bonusDamage:
+      types:
+        Slash: 5
+        Piercing: 5
   iconSprite:
     - sprite: _CP14/Objects/ModularTools/blade.rsi
       state: iron_dagger
@@ -14,6 +32,24 @@
   sourcePart: CP14ModularBladeIronSword
   addSlots:
   - Jewerly1
+  modifiers:
+  - !type:CP14ModularModifierAddComponents
+    copyFromProto:
+    - CP14BaseWeaponThrowable
+    - CP14BaseWeaponChemical
+    - CP14BaseWeaponSharp
+    components:
+    - type: CP14SkillRequirement
+      fuckupChance: 0.5
+      requiredSkills:
+      - Warcraft
+  - !type:CP14ModularModifierModifyDamage
+    resetOnHandSelected: true # Disable fast swap
+    attackRateMultiplier: 1.4
+    bonusRange: 0.2
+    bonusDamage:
+      types:
+        Slash: 17
   iconSprite:
     - sprite: _CP14/Objects/ModularTools/blade.rsi
       state: iron_sword
