--- a/Resources/Prototypes/_CP14/ModularCraft/parts.yml
+++ b/Resources/Prototypes/_CP14/ModularCraft/parts.yml
@@ -23,62 +23,69 @@
         Slash: 5
         Piercing: 5
   iconSprite:
-    - sprite: _CP14/Objects/ModularTools/blade.rsi
-      state: iron_dagger
-
-- type: modularPart
-  id: BladeIronSword
-  targetSlot: Blade
-  sourcePart: CP14ModularBladeIronSword
-  addSlots:
-  - Jewerly1
-  modifiers:
-  - !type:CP14ModularModifierAddComponents
-    copyFromProto:
-    - CP14BaseWeaponThrowable
-    - CP14BaseWeaponChemical
-    - CP14BaseWeaponSharp
-    components:
-    - type: CP14SkillRequirement
-      fuckupChance: 0.5
-      requiredSkills:
-      - Warcraft
-  - !type:CP14ModularModifierModifyDamage
-    resetOnHandSelected: true # Disable fast swap
-    attackRateMultiplier: 1.4
-    bonusRange: 0.2
-    bonusDamage:
-      types:
-        Slash: 17
-  iconSprite:
-    - sprite: _CP14/Objects/ModularTools/blade.rsi
-      state: iron_sword
-
-- type: modularPart
-  id: BladeIronMice
-  targetSlot: Blade
-  sourcePart: CP14ModularBladeIronMice
-  iconSprite:
-    - sprite: _CP14/Objects/ModularTools/blade.rsi
-      state: iron_mice
-
-- type: modularPart
-  id: BladeIronSickle
-  targetSlot: Blade
-  sourcePart: CP14ModularBladeIronSickle
-  iconSprite:
-    - sprite: _CP14/Objects/ModularTools/blade.rsi
-      state: iron_sickle
-
-- type: modularPart
-  id: BladeIronSwordTwoHanded
-  targetSlot: Blade
-  sourcePart: CP14ModularBladeIronTwoHanded
-  addSlots:
-  - Jewerly1
-  iconSprite:
-    - sprite: _CP14/Objects/ModularTools/blade48.rsi
-      state: iron_sword_twohanded
+  - sprite: _CP14/Objects/ModularTools/iron_dagger.rsi
+    state: icon
+  inhandVisuals:
+    left:
+    - sprite: _CP14/Objects/ModularTools/iron_dagger.rsi
+      state: inhand-left
+    right:
+    - sprite: _CP14/Objects/ModularTools/iron_dagger.rsi
+      state: inhand-right
+#
+#- type: modularPart
+#  id: BladeIronSword
+#  targetSlot: Blade
+#  sourcePart: CP14ModularBladeIronSword
+#  addSlots:
+#  - Jewerly1
+#  modifiers:
+#  - !type:CP14ModularModifierAddComponents
+#    copyFromProto:
+#    - CP14BaseWeaponThrowable
+#    - CP14BaseWeaponChemical
+#    - CP14BaseWeaponSharp
+#    components:
+#    - type: CP14SkillRequirement
+#      fuckupChance: 0.5
+#      requiredSkills:
+#      - Warcraft
+#  - !type:CP14ModularModifierModifyDamage
+#    resetOnHandSelected: true # Disable fast swap
+#    attackRateMultiplier: 1.4
+#    bonusRange: 0.2
+#    bonusDamage:
+#      types:
+#        Slash: 17
+#  iconSprite:
+#    - sprite: _CP14/Objects/ModularTools/blade.rsi
+#      state: iron_sword
+#
+#- type: modularPart
+#  id: BladeIronMice
+#  targetSlot: Blade
+#  sourcePart: CP14ModularBladeIronMice
+#  iconSprite:
+#    - sprite: _CP14/Objects/ModularTools/blade.rsi
+#      state: iron_mice
+#
+#- type: modularPart
+#  id: BladeIronSickle
+#  targetSlot: Blade
+#  sourcePart: CP14ModularBladeIronSickle
+#  iconSprite:
+#    - sprite: _CP14/Objects/ModularTools/blade.rsi
+#      state: iron_sickle
+#
+#- type: modularPart
+#  id: BladeIronSwordTwoHanded
+#  targetSlot: Blade
+#  sourcePart: CP14ModularBladeIronTwoHanded
+#  addSlots:
+#  - Jewerly1
+#  iconSprite:
+#    - sprite: _CP14/Objects/ModularTools/blade48.rsi
+#      state: iron_sword_twohanded
 
 
 
