--- a/Resources/Prototypes/_CP14/Entities/Objects/ModularTools/blade.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/ModularTools/blade.yml
@@ -6,69 +6,68 @@
   description: A dagger blade without a hilt. A blacksmith can use it as a spare part to create a weapon.
   components:
   - type: Sprite
-    sprite: _CP14/Objects/ModularTools/blade.rsi
-    layers:
-    - state: iron_dagger
+    sprite: _CP14/Objects/ModularTools/iron_dagger.rsi
+    state: icon
   - type: CP14ModularCraftPart
     possibleParts:
     - BladeIronDagger
 
-- type: entity
-  parent: BaseItem
-  id: CP14ModularBladeIronSword
-  categories: [ ForkFiltered ]
-  name: iron sword blade
-  description: A sword blade without a hilt. A blacksmith can use it as a spare part to create a weapon.
-  components:
-  - type: Sprite
-    sprite: _CP14/Objects/ModularTools/blade.rsi
-    layers:
-    - state: iron_sword
-  - type: CP14ModularCraftPart
-    possibleParts:
-    - BladeIronSword
-
-- type: entity
-  parent: BaseItem
-  id: CP14ModularBladeIronMice
-  categories: [ ForkFiltered ]
-  name: iron mice ball
-  description: A mace ball without a hilt. A blacksmith can use it as a spare part to create a weapon.
-  components:
-  - type: Sprite
-    sprite: _CP14/Objects/ModularTools/blade.rsi
-    layers:
-    - state: iron_mice
-  - type: CP14ModularCraftPart
-    possibleParts:
-    - BladeIronMice
-
-- type: entity
-  parent: BaseItem
-  id: CP14ModularBladeIronSickle
-  categories: [ ForkFiltered ]
-  name: iron sickle blade
-  description: A sickle blade without a hilt. A blacksmith can use it as a spare part to create a weapon.
-  components:
-  - type: Sprite
-    sprite: _CP14/Objects/ModularTools/blade.rsi
-    layers:
-    - state: iron_sickle
-  - type: CP14ModularCraftPart
-    possibleParts:
-    - BladeIronSickle
-
-- type: entity
-  parent: BaseItem
-  id: CP14ModularBladeIronSwordTwoHanded
-  categories: [ ForkFiltered ]
-  name: iron two-handed sword blade
-  description: A two-handed sword blade without a hilt. A blacksmith can use it as a spare part to create a weapon.
-  components:
-  - type: Sprite
-    sprite: _CP14/Objects/ModularTools/blade48.rsi
-    layers:
-    - state: iron_sword_twohanded
-  - type: CP14ModularCraftPart
-    possibleParts:
-    - BladeIronSwordTwoHanded
+#- type: entity
+#  parent: BaseItem
+#  id: CP14ModularBladeIronSword
+#  categories: [ ForkFiltered ]
+#  name: iron sword blade
+#  description: A sword blade without a hilt. A blacksmith can use it as a spare part to create a weapon.
+#  components:
+#  - type: Sprite
+#    sprite: _CP14/Objects/ModularTools/blade.rsi
+#    layers:
+#    - state: iron_sword
+#  - type: CP14ModularCraftPart
+#    possibleParts:
+#    - BladeIronSword
+#
+#- type: entity
+#  parent: BaseItem
+#  id: CP14ModularBladeIronMice
+#  categories: [ ForkFiltered ]
+#  name: iron mice ball
+#  description: A mace ball without a hilt. A blacksmith can use it as a spare part to create a weapon.
+#  components:
+#  - type: Sprite
+#    sprite: _CP14/Objects/ModularTools/blade.rsi
+#    layers:
+#    - state: iron_mice
+#  - type: CP14ModularCraftPart
+#    possibleParts:
+#    - BladeIronMice
+#
+#- type: entity
+#  parent: BaseItem
+#  id: CP14ModularBladeIronSickle
+#  categories: [ ForkFiltered ]
+#  name: iron sickle blade
+#  description: A sickle blade without a hilt. A blacksmith can use it as a spare part to create a weapon.
+#  components:
+#  - type: Sprite
+#    sprite: _CP14/Objects/ModularTools/blade.rsi
+#    layers:
+#    - state: iron_sickle
+#  - type: CP14ModularCraftPart
+#    possibleParts:
+#    - BladeIronSickle
+#
+#- type: entity
+#  parent: BaseItem
+#  id: CP14ModularBladeIronSwordTwoHanded
+#  categories: [ ForkFiltered ]
+#  name: iron two-handed sword blade
+#  description: A two-handed sword blade without a hilt. A blacksmith can use it as a spare part to create a weapon.
+#  components:
+#  - type: Sprite
+#    sprite: _CP14/Objects/ModularTools/blade48.rsi
+#    layers:
+#    - state: iron_sword_twohanded
+#  - type: CP14ModularCraftPart
+#    possibleParts:
+#    - BladeIronSwordTwoHanded
