resprites inhand, add sickle, add attempt modify size

--- a/Resources/Prototypes/_CP14/Entities/Objects/ModularTools/blade.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/ModularTools/blade.yml
@@ -5,6 +5,8 @@
   name: iron dagger blade
   description: A dagger blade without a hilt. A blacksmith can use it as a spare part to create a weapon.
   components:
+  - type: Item
+    storedRotation: 45
   - type: Sprite
     sprite: _CP14/Objects/ModularTools/iron_dagger.rsi
     state: icon
@@ -42,20 +44,21 @@
 #    possibleParts:
 #    - BladeIronMice
 #
-#- type: entity
-#  parent: BaseItem
-#  id: CP14ModularBladeIronSickle
-#  categories: [ ForkFiltered ]
-#  name: iron sickle blade
-#  description: A sickle blade without a hilt. A blacksmith can use it as a spare part to create a weapon.
-#  components:
-#  - type: Sprite
-#    sprite: _CP14/Objects/ModularTools/blade.rsi
-#    layers:
-#    - state: iron_sickle
-#  - type: CP14ModularCraftPart
-#    possibleParts:
-#    - BladeIronSickle
+- type: entity
+  parent: BaseItem
+  id: CP14ModularBladeIronSickle
+  categories: [ ForkFiltered ]
+  name: iron sickle blade
+  description: A sickle blade without a hilt. A blacksmith can use it as a spare part to create a weapon.
+  components:
+  - type: Item
+    storedRotation: 45
+  - type: Sprite
+    sprite: _CP14/Objects/ModularTools/iron_sickle.rsi
+    state: icon
+  - type: CP14ModularCraftPart
+    possibleParts:
+    - BladeIronSickle
 #
 #- type: entity
 #  parent: BaseItem
