--- a/Resources/Prototypes/_CP14/ModularCraft/parts.yml
+++ b/Resources/Prototypes/_CP14/ModularCraft/parts.yml
@@ -17,11 +17,14 @@
       offset: 0.15,0.15
       removalTime: 1
   - !type:CP14ModularModifierModifyDamage
-    attackRateMultiplier: 1.8
+    attackRateMultiplier: 1.2
     bonusDamage:
       types:
         Slash: 5
         Piercing: 5
+  - !type:CP14ModularModifierModifySize
+    newSize: Normal
+    adjustSize: 0, 1
   iconSprite:
   - sprite: _CP14/Objects/ModularTools/iron_dagger.rsi
     state: icon
@@ -32,7 +35,36 @@
     right:
     - sprite: _CP14/Objects/ModularTools/iron_dagger.rsi
       state: inhand-right
-#
+
+- type: modularPart
+  id: BladeIronSickle
+  targetSlot: Blade
+  sourcePart: CP14ModularBladeIronSickle
+  modifiers:
+  - !type:CP14ModularModifierAddComponents
+    copyFromProto:
+    - CP14BaseWeaponChemical
+    - CP14BaseWeaponSharp
+    #components: TODO Add gathering tag
+  - !type:CP14ModularModifierModifyDamage
+    bonusDamage:
+      types:
+        Slash: 9
+        Piercing: 3
+  - !type:CP14ModularModifierModifySize
+    newSize: Normal
+    adjustSize: 0, 2
+  iconSprite:
+  - sprite: _CP14/Objects/ModularTools/iron_sickle.rsi
+    state: icon
+  inhandVisuals:
+    left:
+    - sprite: _CP14/Objects/ModularTools/iron_sickle.rsi
+      state: inhand-left
+    right:
+    - sprite: _CP14/Objects/ModularTools/iron_sickle.rsi
+      state: inhand-right
+
 #- type: modularPart
 #  id: BladeIronSword
 #  targetSlot: Blade
