--- a/Resources/Prototypes/_CP14/ModularCraft/parts.yml
+++ b/Resources/Prototypes/_CP14/ModularCraft/parts.yml
@@ -25,16 +25,10 @@
   - !type:CP14ModularModifierModifySize
     newSize: Normal
     adjustSize: 0, 1
+  rsiPath: _CP14/Objects/ModularTools/iron_dagger.rsi
   iconSprite:
   - sprite: _CP14/Objects/ModularTools/iron_dagger.rsi
     state: icon
-  inhandVisuals:
-    left:
-    - sprite: _CP14/Objects/ModularTools/iron_dagger.rsi
-      state: inhand-left
-    right:
-    - sprite: _CP14/Objects/ModularTools/iron_dagger.rsi
-      state: inhand-right
 
 - type: modularPart
   id: BladeIronSickle
@@ -54,16 +48,10 @@
   - !type:CP14ModularModifierModifySize
     newSize: Normal
     adjustSize: 0, 2
+  rsiPath: _CP14/Objects/ModularTools/iron_sickle.rsi
   iconSprite:
   - sprite: _CP14/Objects/ModularTools/iron_sickle.rsi
     state: icon
-  inhandVisuals:
-    left:
-    - sprite: _CP14/Objects/ModularTools/iron_sickle.rsi
-      state: inhand-left
-    right:
-    - sprite: _CP14/Objects/ModularTools/iron_sickle.rsi
-      state: inhand-right
 
 #- type: modularPart
 #  id: BladeIronSword
