--- a/Resources/Prototypes/_CP14/Entities/Objects/ModularTools/grips.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/ModularTools/grips.yml
@@ -57,7 +57,7 @@
     resetOnHandSelected: false #Fast swap
     range: 1.0 # 1.5 standart
     cPAnimationOffset: -0.75 #-1 standart
-    attackRate: 1.3 # 1 standart
+    attackRate: 1 # 1 standart
 
 - type: entity
   parent: CP14ModularGripBase
@@ -89,4 +89,10 @@
   - type: MeleeWeapon
     resetOnHandSelected: true
     range: 1.5 # 1.5 standart
+    attackRate: 0.5 # 1 standart
     cPAnimationOffset: -1
+  - type: Wieldable
+  - type: IncreaseDamageOnWield
+    damage:
+      types:
+        Blunt: 0
