--- a/Resources/Prototypes/_CP14/Entities/Objects/ModularTools/grips.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/ModularTools/grips.yml
@@ -40,6 +40,7 @@
   - type: Item
     shape:
     - 0,0,0,0
+    storedOffset: 0, -5
   - type: Sprite
     sprite: _CP14/Objects/ModularTools/wooden_grip.rsi
     state: icon
@@ -76,6 +77,7 @@
   - type: Item
     shape:
     - 0,0,0,1
+    storedOffset: 0, -15
   - type: Sprite
     sprite: _CP14/Objects/ModularTools/wooden_grip_long.rsi
     state: icon
