--- a/Resources/Prototypes/_CP14/ModularCraft/baseModularModifier.yml
+++ b/Resources/Prototypes/_CP14/ModularCraft/baseModularModifier.yml
@@ -55,6 +55,7 @@
     components:
     - type: Sharp
     - type: CP14Sharpened
+      sharpness: 0
     - type: CP14SharpeningStone
     - type: UseDelay
     - type: Tool
