--- a/Resources/Prototypes/_CP14/Roles/Jobs/Fun/misc_startinggear.yml
+++ b/Resources/Prototypes/_CP14/Roles/Jobs/Fun/misc_startinggear.yml
@@ -6,5 +6,5 @@
     pants: CP14ClothingPantsLoincloth
     shoes: CP14ClothingShoesSandals
   inhand:
-    - CP14BaseDagger
-    - CP14BaseDagger
+    - CP14ModularIronDagger
+    - CP14ModularIronDagger
