sickle and mace modular replace

--- a/Resources/Prototypes/_CP14/Entities/Objects/Weapons/ModularPresets/daggers.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/Weapons/ModularPresets/daggers.yml
@@ -1,7 +1,7 @@
 - type: entity
   id: CP14ModularIronDagger
   parent: CP14ModularGripWooden
-  name: dagger
+  name: iron dagger
   description: A small, multi-purpose, sharp blade. You can cut meat or throw it at a goblin.
   components:
   - type: Sprite
