--- a/Resources/migration.yml
+++ b/Resources/migration.yml
@@ -164,6 +164,8 @@ CP14SpawnPointCaptain: null
 CP14BaseDagger: CP14ModularIronDagger
 CP14BaseMace: CP14ModularIronMace
 CP14BaseSickle: CP14ModularIronSickle
+CP14BaseThrowableSpear: CP14ModularIronSpear
+CP14BaseSword: CP14ModularIronSword
 
 # <---> CrystallEdge migration zone end
 
