--- a/Resources/Prototypes/_CP14/ModularCraft/Blade/blade.yml
+++ b/Resources/Prototypes/_CP14/ModularCraft/Blade/blade.yml
@@ -10,25 +10,25 @@
   addSlots:
   - Jewerly1
   modifiers:
-  - !type:CP14ModularModifierInherit
+  - !type:Inherit
     copyFrom:
     - BaseWeaponThrowable
     - BaseWeaponChemical
     - BaseWeaponSharp
-  - !type:CP14ModularModifierAddComponents
+  - !type:AddComponents
     components:
     - type: ThrowingAngle
       angle: 135
     - type: EmbeddableProjectile
       offset: -0.15,-0.15
       removalTime: 0.5
-  - !type:CP14ModularModifierModifyDamage
+  - !type:EditMeleeWeapon
     attackRateMultiplier: 1.4
     bonusDamage:
       types:
         Slash: 3
         Piercing: 3
-  - !type:CP14ModularModifierModifySize
+  - !type:EditItem
     newSize: Normal
     adjustShape: 0, 1
     storedOffsetBonus: 0, 5
@@ -42,18 +42,18 @@
   sourcePart: CP14ModularBladeIronSickle
   rsiPath: _CP14/Objects/ModularTools/iron_sickle.rsi
   modifiers:
-  - !type:CP14ModularModifierInherit
+  - !type:Inherit
     copyFrom:
     - BaseWeaponChemical
     - BaseWeaponSharp
     #components: TODO Add gathering tag
-  - !type:CP14ModularModifierModifyDamage
+  - !type:EditMeleeWeapon
     attackRateMultiplier: 1.4
     bonusDamage:
       types:
         Slash: 4
         Piercing: 1
-  - !type:CP14ModularModifierModifySize
+  - !type:EditItem
     newSize: Normal
     adjustShape: 0, 1
     storedOffsetBonus: 0, 5
@@ -68,12 +68,12 @@
   sourcePart: CP14ModularBladeIronSpear
   rsiPath: _CP14/Objects/ModularTools/iron_spear.rsi
   modifiers:
-  - !type:CP14ModularModifierInherit
+  - !type:Inherit
     copyFrom:
     - BaseWeaponThrowable
     - BaseWeaponChemical
     - BaseWeaponSharp
-  - !type:CP14ModularModifierAddComponents
+  - !type:AddComponents
     override: true
     components:
     - type: DamageOtherOnHit
@@ -85,13 +85,13 @@
     - type: EmbeddableProjectile
       offset: -0.15,-0.15
       removalTime: 1.5
-  - !type:CP14ModularModifierModifyDamage
+  - !type:EditMeleeWeapon
     newWideAnimation: CP14WeaponArcThrust
     angleMultiplier: 0
     bonusDamage:
       types:
         Piercing: 7
-  - !type:CP14ModularModifierModifySize
+  - !type:EditItem
     newSize: Normal
     adjustShape: 0, 1
     storedOffsetBonus: 0, 5
@@ -105,22 +105,22 @@
   sourcePart: CP14ModularBladeIronMace
   rsiPath: _CP14/Objects/ModularTools/iron_mace.rsi
   modifiers:
-  - !type:CP14ModularModifierInherit
+  - !type:Inherit
     copyFrom:
     - BaseWeaponChemical
-  - !type:CP14ModularModifierModifyDamage
+  - !type:EditMeleeWeapon
     resetOnHandSelected: true # Disable fast swap
     attackRateMultiplier: 0.85
     bonusDamage:
       types:
         Blunt: 4
         Piercing: 1
-  - !type:CP14ModularModifierModifyWieldedDamage
+  - !type:EditIncreaseDamageOnWield
     bonusDamage:
       types:
         Blunt: 8
         Piercing: 4
-  - !type:CP14ModularModifierModifySize
+  - !type:EditItem
     newSize: Large
     adjustShape: 0, 1
     storedOffsetBonus: 0, 5
@@ -137,17 +137,17 @@
   addSlots:
   - Jewerly1
   modifiers:
-  - !type:CP14ModularModifierInherit
+  - !type:Inherit
     copyFrom:
     - BaseWeaponChemical
     - BaseWeaponSharp
-  - !type:CP14ModularModifierAddComponents
+  - !type:AddComponents
     components:
     - type: CP14SkillRequirement
       fuckupChance: 0.5
       requiredSkills:
       - Warcraft
-  - !type:CP14ModularModifierModifyDamage
+  - !type:EditMeleeWeapon
     resetOnHandSelected: true # Disable fast swap
     bonusRange: 0.2
     angleMultiplier: 1.2
@@ -155,12 +155,12 @@
       types:
         Slash: 8
         Piercing: 5
-  - !type:CP14ModularModifierModifyWieldedDamage
+  - !type:EditIncreaseDamageOnWield
     bonusDamage:
       types:
         Slash: 5
         Piercing: 2
-  - !type:CP14ModularModifierModifySize
+  - !type:EditItem
     newSize: Normal
     adjustShape: 0, 2
     storedOffsetBonus: 0, 10
