--- a/Resources/Prototypes/_CP14/Entities/Objects/ModularTools/grips.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/ModularTools/grips.yml
@@ -46,6 +46,7 @@
     sprite: _CP14/Objects/ModularTools/wooden_grip.rsi
     state: icon
   - type: CP14ModularCraftStartPoint
+    startProtoPart: CP14ModularGripWooden
     startSlots:
     - Blade
   - type: Destructible
@@ -83,6 +84,7 @@
     sprite: _CP14/Objects/ModularTools/wooden_grip_long.rsi
     state: icon
   - type: CP14ModularCraftStartPoint
+    startProtoPart: CP14ModularGripWoodenLong
     startSlots:
     - Blade
   - type: Destructible
@@ -119,6 +121,8 @@
   components:
   - type: Sprite
     sprite: _CP14/Objects/ModularTools/iron_grip.rsi
+  - type: CP14ModularCraftStartPoint
+    startProtoPart: CP14ModularGripIron
   - type: Destructible
     thresholds:
     - trigger:
@@ -140,6 +144,8 @@
   components:
   - type: Sprite
     sprite: _CP14/Objects/ModularTools/iron_grip_long.rsi
+  - type: CP14ModularCraftStartPoint
+    startProtoPart: CP14ModularGripIronLong
   - type: Destructible
     thresholds:
     - trigger:
